scrumcards5 files renamed to index

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html> 
-<html manifest="scrumcards5.manifest">
+<html manifest="index.manifest">
     <head>
         <meta content="text/html; charset=UTF-8" http-equiv="content-type"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
@@ -15,7 +15,7 @@
         <meta name="robots" content="index,follow">
 
         <!-- deployment -->
-        <link href="./scrumcards5.css" rel="stylesheet" media="screen">
+        <link href="./index.css" rel="stylesheet" media="screen">
 
         <link rel="icon" href="favicon.png" type="image/png">
         <link rel="apple-touch-icon-precomposed" href="apple-touch-icon-precomposed.png">
@@ -172,7 +172,7 @@
     </div>
 
     <!-- deployment -->
-    <script src="./scrumcards5.js"></script>
+    <script src="./index.js"></script>
 
     <!-- init  -->
     <script type="text/javascript">
