--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>scrumcards5</title>
 
         <meta http-equiv="language" content="en">
-        <meta name="description" content="Mobile Scrum tool for agile software development. Displays Scrum values on all HTML5 capable mogit bile devices.">
+        <meta name="description" content="Mobile Scrum tool for agile software development. Displays Scrum values on all HTML5 capable mobile devices.">
         <meta name="keywords" content="mobile, scrum, tool, agile, HTML5">
         <meta name="page-topic" content="Scrum">
         <meta name="page-type" content="Tool">
