--- a/index.html
+++ b/index.html
@@ -14,8 +14,14 @@
         <meta name="copyright" content="Kacper Bak">
         <meta name="robots" content="index,follow">
 
+
+        <!-- development -->
+        <link href="font.css" rel="stylesheet" media="screen">
+        <link href="bootstrap.min.css" rel="stylesheet" media="screen">
+        <link href="index.css" rel="stylesheet" media="screen">
+
         <!-- deployment -->
-        <link href="./index.css" rel="stylesheet" media="screen">
+        <!--<link href="./index.css" rel="stylesheet" media="screen">-->
 
         <link rel="icon" href="favicon.png" type="image/png">
         <link rel="apple-touch-icon-precomposed" href="apple-touch-icon-precomposed.png">
@@ -171,8 +177,28 @@
         <div class="span4"><button id="plus" class="btn btn-large btn-block" type="button"><i class="icon-plus"></i></button></div>
     </div>
 
+    <!-- development -->
+    <script src="js/lib/jquery-1.10.2.min.js"></script>
+    <script src="js/lib/bootstrap.min.js"></script>
+    <script src="js/lib/underscore-min.js"></script>
+    <script src="js/lib/string.min.js"></script>
+
+    <script src="js/app/initApp.js"></script>
+    <script src="js/app/screenDimension.js"></script>
+    <script src="js/app/colormanagement.js"></script>
+    <script src="js/app/localStorage.js"></script>
+    <script src="js/app/debug.js"></script>
+
+    <script src="js/ui/mainSegment.js"></script>
+    <script src="js/ui/specialCharsSegment.js"></script>
+    <script src="js/ui/scrumPointsSegment.js"></script>
+    <script src="js/ui/infoSegment.js"></script>
+    <script src="js/ui/afterSelectSegment.js"></script>
+    <script src="js/ui/settingsSegment.js"></script>
+    <script src="js/ui/themesSegment.js"></script>
+
     <!-- deployment -->
-    <script src="./index.js"></script>
+    <!--<script src="./index.js"></script>-->
 
     <!-- init  -->
     <script type="text/javascript">
