source added to AppInfo

--- a/index.html
+++ b/index.html
@@ -95,6 +95,11 @@
             </div>
 
             <div class="row-fluid">
+                <div class="span2 infoContent"><span class="infoContent">Source:</span></div>
+                <div class="span8 infoContent"><span class="infoContent"><a href="https://github.com/KacperBak/scrumcards5">GitHub</a></span></div>
+            </div>
+
+            <div class="row-fluid">
                 <div class="span2 infoContent"><span class="infoContent">Contact:</span></div>
                 <div class="span8 infoContent"><span class="infoContent"><a href="mailto:info@scrumcards5.com">E-Mail</a></span></div>
             </div>
