refactoring to mainSymbol

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         </div>
 
         <!-- afterSelect menu -->
-        <div id="afterSelectSegment" class="row-fluid" data-toggle="buttons-radio">
+        <div id="mainSymbolSegment" class="row-fluid" data-toggle="buttons-radio">
 
             <div class="row-fluid">
                 <div class="span12">
@@ -198,7 +198,7 @@
     <script src="js/ui/specialCharsSegment.js"></script>
     <script src="js/ui/scrumPointsSegment.js"></script>
     <script src="js/ui/infoSegment.js"></script>
-    <script src="js/ui/afterSelectSegment.js"></script>
+    <script src="js/ui/mainSymbolSegment.js"></script>
     <script src="js/ui/settingsSegment.js"></script>
     <script src="js/ui/themesSegment.js"></script>
 
