--- a/index.html
+++ b/index.html
@@ -90,22 +90,29 @@
         <div id="mainSymbolFontSizeSegment" class="row-fluid" data-toggle="buttons-radio">
             <div class="row-fluid">
                 <div class="span12">
-                    <h4 class="settingsContent">In small font size</h4>
-                </div>
-            </div>
-
-            <div class="row-fluid">
-                <div class="span12">
-                    <p class="settingsContent">After a symbol has been changed, it appears as a <strong>small</strong> figure in the main of the screen.</p>
+                    <h4 class="settingsContent">Enable customized font size</h4>
                 </div>
             </div>
 
             <div class="row-fluid" data-toggle="buttons-radio">
-                <div class="span6"><button id="smallMainSymbolOn" class="btn btn-large btn-block" type="button">On</button></div>
+                <div class="span6"><button id="mainSymbolFontSizeOn" class="btn btn-large btn-block" type="button">On</button></div>
                 <div class="span6"><button id="smallMainSymbolOff" class="btn btn-large btn-block" type="button">Off</button></div>
             </div>
         </div>
 
+        <!-- mainSymbolOpacitySegment menu -->
+        <div id="mainSymbolOpacitySegment" class="row-fluid" data-toggle="buttons-radio">
+            <div class="row-fluid">
+                <div class="span12">
+                    <h4 class="settingsContent">Enable font opacity</h4>
+                </div>
+            </div>
+
+            <div class="row-fluid" data-toggle="buttons-radio">
+                <div class="span6"><button id="mainSymbolOpacityOn" class="btn btn-large btn-block" type="button">On</button></div>
+                <div class="span6"><button id="mainSymbolOpacityOff" class="btn btn-large btn-block" type="button">Off</button></div>
+            </div>
+        </div>
 
         <!-- info menu -->
         <div id="infoSegment" class="row-fluid">
@@ -189,6 +196,7 @@
     <script src="js/ui/infoSegment.js"></script>
     <script src="js/ui/mainSymbolSegment.js"></script>
     <script src="js/ui/mainSymbolFontSizeSegment.js"></script>
+    <script src="js/ui/mainSymbolOpacitySegment.js"></script>
     <script src="js/ui/settingsSegment.js"></script>
     <script src="js/ui/themesSegment.js"></script>
 
