cleaned-up redundant code, fixed css-selector

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
             <div class="row-fluid" data-toggle="buttons-radio">
                 <div class="span6"><button id="mainSymbolFontSizeOn" class="btn btn-large btn-block" type="button">On</button></div>
-                <div class="span6"><button id="smallMainSymbolOff" class="btn btn-large btn-block" type="button">Off</button></div>
+                <div class="span6"><button id="mainSymbolFontSizeOff" class="btn btn-large btn-block" type="button">Off</button></div>
             </div>
         </div>
 
