increase, decrease of fontsize implemented, but still bugy

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         </div>
 
         <!-- mainSymbolFontSize menu -->
-        <div id="mainSymbolFontSizeSegment" class="row-fluid" data-toggle="buttons-radio">
+        <div id="mainSymbolFontSizeSegment" class="row-fluid">
             <div class="row-fluid">
                 <div class="span12">
                     <h4 class="settingsContent">Enable customized font size</h4>
@@ -97,6 +97,19 @@
             <div class="row-fluid" data-toggle="buttons-radio">
                 <div class="span6"><button id="mainSymbolFontSizeOn" class="btn btn-large btn-block" type="button">On</button></div>
                 <div class="span6"><button id="mainSymbolFontSizeOff" class="btn btn-large btn-block" type="button">Off</button></div>
+            </div>
+
+            <div class="row-fluid">
+                <div class="span12">
+                    <h4 id="customizedFontSizeParent" class="settingsContent">
+                        <span id="customizedFontSizeValue">Customized font size: </span>
+                    </h4>
+                </div>
+            </div>
+
+            <div class="row-fluid">
+                <div class="span6"><button id="mainSymbolFontSizeMinus" class="btn btn-large btn-block" type="button"><i class="icon-minus"></i></button></div>
+                <div class="span6"><button id="mainSymbolFontSizePlus" class="btn btn-large btn-block" type="button"><i class="icon-plus"></i></button></div>
             </div>
         </div>
 
