--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             <div class="row-fluid">
                 <div class="span12">
                     <h4 id="customizedFontSizeParent" class="settingsContent">
-                        <span id="customizedFontSizeValue">Customized font size: </span>
+                        <span id="customizedFontSizeValue">Font size factor: </span>
                     </h4>
                 </div>
             </div>
