--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         </div>
 
         <!-- mainSymbolFontSize menu -->
-        <div id="mainSymbolFontSizeSegment" class="row-fluid">
+        <div id="mainSymbolPreviewFontSizeSegment" class="row-fluid">
             <div class="row-fluid">
                 <div class="span12">
                     <h4 class="settingsContent">Enable customized font size</h4>
@@ -95,8 +95,8 @@
             </div>
 
             <div class="row-fluid" data-toggle="buttons-radio">
-                <div class="span6"><button id="mainSymbolFontSizeOn" class="btn btn-large btn-block" type="button">On</button></div>
-                <div class="span6"><button id="mainSymbolFontSizeOff" class="btn btn-large btn-block" type="button">Off</button></div>
+                <div class="span6"><button id="mainSymbolPreviewFontSizeOn" class="btn btn-large btn-block" type="button">On</button></div>
+                <div class="span6"><button id="mainSymbolPreviewFontSizeOff" class="btn btn-large btn-block" type="button">Off</button></div>
             </div>
 
             <div class="row-fluid">
@@ -108,8 +108,8 @@
             </div>
 
             <div class="row-fluid">
-                <div class="span6"><button id="mainSymbolFontSizeMinus" class="btn btn-large btn-block" type="button"><i class="icon-minus"></i></button></div>
-                <div class="span6"><button id="mainSymbolFontSizePlus" class="btn btn-large btn-block" type="button"><i class="icon-plus"></i></button></div>
+                <div class="span6"><button id="mainSymbolPreviewFontSizeMinus" class="btn btn-large btn-block" type="button"><i class="icon-minus"></i></button></div>
+                <div class="span6"><button id="mainSymbolPreviewFontSizePlus" class="btn btn-large btn-block" type="button"><i class="icon-plus"></i></button></div>
             </div>
         </div>
 
@@ -196,7 +196,7 @@
     <script src="js/lib/underscore-min.js"></script>
     <script src="js/lib/string.min.js"></script>
 
-    <script src="js/app/initApp.js"></script>
+    <script src="js/app/initapp.js"></script>
     <script src="js/app/screenDimension.js"></script>
     <script src="js/app/colormanagement.js"></script>
     <script src="js/app/localStorage.js"></script>
@@ -208,7 +208,7 @@
     <script src="js/ui/scrumPointsSegment.js"></script>
     <script src="js/ui/infoSegment.js"></script>
     <script src="js/ui/mainSymbolSegment.js"></script>
-    <script src="js/ui/mainSymbolFontSizeSegment.js"></script>
+    <script src="js/ui/mainSymbolPreviewFontSizeSegment.js"></script>
     <script src="js/ui/mainSymbolOpacitySegment.js"></script>
     <script src="js/ui/settingsSegment.js"></script>
     <script src="js/ui/themesSegment.js"></script>
