refactor font size naming to PREVIEW and PRESENT state cleanup

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             <div class="row-fluid"><div class="span12"><button id="mainSymbolOpacity" class="btn btn-large btn-block" type="button">Opacity</button></div></div>
         </div>
 
-        <!-- mainSymbolFontSize menu -->
+        <!-- mainSymbolPreviewFontSize menu -->
         <div id="mainSymbolPreviewFontSizeSegment" class="row-fluid">
             <div class="row-fluid">
                 <div class="span12">
