removed enable, disable option from customized PREVIEW font size

--- a/index.html
+++ b/index.html
@@ -82,23 +82,12 @@
 
         <!-- mainSymbolSegment menu -->
         <div id="mainSymbolSegment">
-            <div class="row-fluid"><div class="span12"><button id="mainSymbolFontSize" class="btn btn-large btn-block" type="button">Font size</button></div></div>
-            <div class="row-fluid"><div class="span12"><button id="mainSymbolOpacity" class="btn btn-large btn-block" type="button">Opacity</button></div></div>
+            <div class="row-fluid"><div class="span12"><button id="mainSymbolFontSize" class="btn btn-large btn-block" type="button">Preview Font size</button></div></div>
+            <div class="row-fluid"><div class="span12"><button id="mainSymbolOpacity" class="btn btn-large btn-block" type="button">Preview Opacity</button></div></div>
         </div>
 
         <!-- mainSymbolPreviewFontSize menu -->
         <div id="mainSymbolPreviewFontSizeSegment" class="row-fluid">
-            <div class="row-fluid">
-                <div class="span12">
-                    <h4 class="settingsContent">Enable customized font size</h4>
-                </div>
-            </div>
-
-            <div class="row-fluid" data-toggle="buttons-radio">
-                <div class="span6"><button id="mainSymbolPreviewFontSizeOn" class="btn btn-large btn-block" type="button">On</button></div>
-                <div class="span6"><button id="mainSymbolPreviewFontSizeOff" class="btn btn-large btn-block" type="button">Off</button></div>
-            </div>
-
             <div class="row-fluid">
                 <div class="span12">
                     <h4 id="customizedFontSizeParent" class="settingsContent">
