implementing: switching between decks

--- a/index.html
+++ b/index.html
@@ -194,6 +194,7 @@
     <script src="js/app/screenDimension.js"></script>
     <script src="js/app/colormanagement.js"></script>
     <script src="js/app/localStorage.js"></script>
+    <script src="js/app/decks.js"></script>
     <script src="js/app/debug.js"></script>
 
     <script src="js/ui/generalUi.js"></script>
