implementing: ...switching between decks

--- a/index.html
+++ b/index.html
@@ -152,27 +152,54 @@
             <div id="mainContent" class="span12 text-center large-figure" data-icon="&#xe00e;"></div>
         </div>
 
-        <!-- possible scrum values to select -->
-        <div id="scrumPointsSegment">
+        <!-- deck with possible scrum values to select -->
+        <div id="deck0Segment">
             <div class="row-fluid spRow1">
-                <div id="point0" class="span4 text-center well well-small selectValue">0</div>
-                <div id="point1" class="span4 text-center well well-small selectValue">&#189;</div>
-                <div id="point2" class="span4 text-center well well-small selectValue">1</div>
+                <div id="d0p0" class="span4 text-center well well-small selectValue">0</div>
+                <div id="d0p1" class="span4 text-center well well-small selectValue">&#189;</div>
+                <div id="d0p2" class="span4 text-center well well-small selectValue">1</div>
             </div>
             <div class="row-fluid spRow2">
-                <div id="point3" class="span4 text-center well well-small selectValue">2</div>
-                <div id="point4" class="span4 text-center well well-small selectValue">3</div>
-                <div id="point5" class="span4 text-center well well-small selectValue">5</div>
+                <div id="d0p3" class="span4 text-center well well-small selectValue">2</div>
+                <div id="d0p4" class="span4 text-center well well-small selectValue">3</div>
+                <div id="d0p5" class="span4 text-center well well-small selectValue">5</div>
             </div>
             <div class="row-fluid spRow3">
-                <div id="point6" class="span4 text-center well well-small selectValue">8</div>
-                <div id="point7" class="span4 text-center well well-small selectValue">13</div>
-                <div id="point8" class="span4 text-center well well-small selectValue">20</div>
+                <div id="d0p6" class="span4 text-center well well-small selectValue">8</div>
+                <div id="d0p7" class="span4 text-center well well-small selectValue">13</div>
+                <div id="d0p8" class="span4 text-center well well-small selectValue">20</div>
             </div>
             <div class="row-fluid spRow4">
-                <div id="point9"  class="span4 text-center well well-small selectValue">40</div>
-                <div id="point10" class="span4 text-center well well-small selectValue">100</div>
-                <div id="point11" class="span4 text-center well well-small selectValue">&#63;</div>
+                <div id="d0p9"  class="span4 text-center well well-small selectValue">40</div>
+                <div id="d0p10" class="span4 text-center well well-small selectValue">100</div>
+                <div id="d0p11" class="span4 text-center well well-small selectValue">&#63;</div>
+            </div>
+        </div>
+
+         <!--deck with special characters to select -->
+        <div id="deck1Segment">
+            <div class="row-fluid spRow1">
+                <div id="d1p0" class="span4 text-center well well-small selectValue" data-icon="&#xe007;"></div>
+                <div id="d1p1" class="span4 text-center well well-small selectValue" data-icon="&#xe009;"></div>
+                <div id="d1p2" class="span4 text-center well well-small selectValue" data-icon="&#xe008;"></div>
+            </div>
+
+            <div class="row-fluid spRow2">
+                <div id="d1p3" class="span4 text-center well well-small selectValue" data-icon="&#xe004;"></div>
+                <div id="d1p4" class="span4 text-center well well-small selectValue" data-icon="&#xe000;"></div>
+                <div id="d1p5" class="span4 text-center well well-small selectValue" data-icon="&#xe005;"></div>
+            </div>
+
+            <div class="row-fluid spRow3">
+                <div id="d1p6" class="span4 text-center well well-small selectValue" data-icon="&#xe003;"></div>
+                <div id="d1p7" class="span4 text-center well well-small selectValue" data-icon="&#xe00b;"></div>
+                <div id="d1p8" class="span4 text-center well well-small selectValue" data-icon="&#xe00a;"></div>
+            </div>
+
+            <div class="row-fluid spRow4">
+                <div id="d1p9" class="span4 text-center well well-small selectValue" data-icon="&#xe00c;"></div>
+                <div id="d1p10" class="span4 text-center well well-small selectValue" data-icon="&#xe00e;"></div>
+                <div id="d1p11" class="span4 text-center well well-small selectValue" data-icon="&#xe00d;"></div>
             </div>
         </div>
 
@@ -200,7 +227,8 @@
     <script src="js/ui/generalUi.js"></script>
     <script src="js/ui/mainSegment.js"></script>
     <script src="js/ui/decksSegment.js"></script>
-    <script src="js/ui/scrumPointsSegment.js"></script>
+    <script src="js/ui/deck0Segment.js"></script>
+    <script src="js/ui/deck1Segment.js"></script>
     <script src="js/ui/infoSegment.js"></script>
     <script src="js/ui/mainSymbolSegment.js"></script>
     <script src="js/ui/mainSymbolPreviewFontSizeSegment.js"></script>
