fibonacci deck implemented

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
                 <span data-icon="&#xe000;"></span>,
                 ...
             </button></div></div>
+            <div class="row-fluid"><div class="span12"><button id="fibonacci" class="btn btn-large btn-block" type="button">0, 1, 2, 3, 5, ...</button></div></div>
         </div>
 
         <!-- settings menu -->
@@ -203,6 +204,30 @@
             </div>
         </div>
 
+        <!-- deck with possible scrum values to select -->
+        <div id="deck2Segment">
+            <div class="row-fluid spRow1">
+                <div id="d2p0" class="span4 text-center well well-small selectValue">0</div>
+                <div id="d2p1" class="span4 text-center well well-small selectValue">1</div>
+                <div id="d2p2" class="span4 text-center well well-small selectValue">2</div>
+            </div>
+            <div class="row-fluid spRow2">
+                <div id="d2p3" class="span4 text-center well well-small selectValue">3</div>
+                <div id="d2p4" class="span4 text-center well well-small selectValue">5</div>
+                <div id="d2p5" class="span4 text-center well well-small selectValue">8</div>
+            </div>
+            <div class="row-fluid spRow3">
+                <div id="d2p6" class="span4 text-center well well-small selectValue">13</div>
+                <div id="d2p7" class="span4 text-center well well-small selectValue">21</div>
+                <div id="d2p8" class="span4 text-center well well-small selectValue">34</div>
+            </div>
+            <div class="row-fluid spRow4">
+                <div id="d2p9"  class="span4 text-center well well-small selectValue">55</div>
+                <div id="d2p10" class="span4 text-center well well-small selectValue">89</div>
+                <div id="d2p11" class="span4 text-center well well-small selectValue">144</div>
+            </div>
+        </div>
+
     </div>
 
     <div id="footer" class="footer row-fluid">
@@ -229,6 +254,7 @@
     <script src="js/ui/decksSegment.js"></script>
     <script src="js/ui/deck0Segment.js"></script>
     <script src="js/ui/deck1Segment.js"></script>
+    <script src="js/ui/deck2Segment.js"></script>
     <script src="js/ui/infoSegment.js"></script>
     <script src="js/ui/mainSymbolSegment.js"></script>
     <script src="js/ui/mainSymbolPreviewFontSizeSegment.js"></script>
