more expressive main icons chosen

--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
     <body>
 
     <div id="header" class="header row-fluid">
-        <div class="span4"><button id="decks" class="btn btn-large btn-block" type="button"><i class="icon-star"></i></button></div>
+        <div class="span4"><button id="decks" class="btn btn-large btn-block" type="button"><i class="icon-font"></i></button></div>
         <div class="span4"><button id="fullscreen" class="btn btn-large btn-block" type="button"><i class="icon-fullscreen"></i></button></div>
-        <div class="span4"><button id="settings" class="btn btn-large btn-block" type="button"><i class="icon-cog"></i></button></div>
+        <div class="span4"><button id="settings" class="btn btn-large btn-block" type="button"><i class="icon-wrench"></i></button></div>
     </div>
 
     <div id="main" class="content row-fluid">
