--- a/index.html
+++ b/index.html
@@ -38,16 +38,30 @@
 
         <!-- different decks-->
         <div id="decksSegment">
-            <div class="row-fluid"><div class="span12"><button id="normal" class="btn btn-large btn-block" type="button">0 , &#189; , 1 , 2 , 3, ...</button></div></div>
-            <div class="row-fluid"><div class="span12"><button id="special" class="btn btn-large btn-block" type="button">
-                <span data-icon="&#xe007;"></span>,
-                <span data-icon="&#xe009;"></span>,
-                <span data-icon="&#xe008;"></span>,
-                <span data-icon="&#xe004;"></span>,
-                <span data-icon="&#xe000;"></span>,
-                ...
+            <div class="row-fluid"><div class="span12"><button id="normal" class="btn btn-large btn-block" type="button">
+                <span>Scrum:</span>&nbsp;
+                <span>0</span>&nbsp;
+                <span>&#189;</span>&nbsp;
+                <span>1</span>&nbsp;
+                <span>2</span>&nbsp;
+                <span>3</span>&nbsp;
             </button></div></div>
-            <div class="row-fluid"><div class="span12"><button id="fibonacci" class="btn btn-large btn-block" type="button">0, 1, 2, 3, 5, ...</button></div></div>
+            <div class="row-fluid"><div class="span12"><button id="special" class="btn btn-large btn-block" type="button">
+                <span>Icons:</span>&nbsp;
+                <span class="icon-smiley"></span>&nbsp;
+                <span class="icon-thumbs-up-2"></span>&nbsp;
+                <span class="icon-mug"></span>&nbsp;
+                <span class="icon-infinity-001"></span>&nbsp;
+                <span class="icon-loop"></span>&nbsp;
+            </button></div></div>
+            <div class="row-fluid"><div class="span12"><button id="fibonacci" class="btn btn-large btn-block" type="button">
+                <span>Fibonacci:</span>&nbsp;
+                <span>0</span>&nbsp;
+                <span>1</span>&nbsp;
+                <span>2</span>&nbsp;
+                <span>3</span>&nbsp;
+                <span>5</span>&nbsp;
+            </button></div></div>
         </div>
 
         <!-- settings menu -->
@@ -198,8 +212,8 @@
             </div>
 
             <div class="row-fluid spRow4">
-                <div id="d1p9" class="span4 text-center well well-small selectValue" data-icon="&#xe00c;"></div>
-                <div id="d1p10" class="span4 text-center well well-small selectValue" data-icon="&#xe00e;"></div>
+                <div id="d1p9" class="span4 text-center well well-small selectValue" data-icon="&#xe001;"></div>
+                <div id="d1p10" class="span4 text-center well well-small selectValue" data-icon="&#xe00c;"></div>
                 <div id="d1p11" class="span4 text-center well well-small selectValue" data-icon="&#xe00d;"></div>
             </div>
         </div>
