--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <meta name="publisher" content="Kacper Bak">
         <meta name="copyright" content="Kacper Bak">
         <meta name="robots" content="index,follow">
+        <meta name="apple-mobile-web-app-capable" content="yes" />
 
 
         <!-- development -->
