--- a/index.html
+++ b/index.html
@@ -140,25 +140,49 @@
         <!-- info menu -->
         <div id="infoSegment" class="row-fluid">
 
-            <!-- max rowsize span 10 see infoContent CSS class -->
+            <div class="infoRow">&nbsp;</div>
+
+            <div class="infoRow">What purpose serves this app?</div>
+            <div class="infoRow">
+                <strong>
+                    <a href="http://en.wikipedia.org/wiki/Planning_poker" class="infoContent">
+                        It is a scum tool to estimate efforts of user stories.
+                        Those efforts are represented as values on the chosen card deck.
+                    </a>
+                </strong>
+            </div>
+            <div class="infoRow">&nbsp;</div>
+
             <div class="row-fluid">
-                <div class="span2 infoContent"><span class="infoContent">Version:</span></div>
-                <div class="span8 infoContent"><span class="infoContent">0.0.1 - Alpha -</span></div>
+                <div class="span4 infoRow"><span class="infoRow">Author:</span></div>
+                <div class="span6 infoRow"><span class="infoRow">
+                    <strong>
+                        <a href="http://kacperbak.de" class="infoContent">Kacper Bak</a>
+                    </strong>
+                </span></div>
             </div>
 
             <div class="row-fluid">
-                <div class="span2 infoContent"><span class="infoContent">Author:</span></div>
-                <div class="span8 infoContent"><span class="infoContent"><a href="http://kacperbak.de">Kacper Bak</a></span></div>
+                <div class="span4 infoRow"><span class="infoRow">Source:</span></div>
+                <div class="span6 infoRow"><span class="infoRow">
+                    <strong>
+                        <a href="https://github.com/KacperBak/scrumcards5" class="infoContent">GitHub</a>
+                    </strong>
+                </span></div>
             </div>
 
             <div class="row-fluid">
-                <div class="span2 infoContent"><span class="infoContent">Source:</span></div>
-                <div class="span8 infoContent"><span class="infoContent"><a href="https://github.com/KacperBak/scrumcards5">GitHub</a></span></div>
+                <div class="span4 infoRow"><span class="infoRow">Contact:</span></div>
+                <div class="span6 infoRow"><span class="infoRow">
+                    <strong>
+                        <a href="mailto:info@scrumcards5.com" class="infoContent">E-Mail</a>
+                    </strong>
+                </span></div>
             </div>
 
             <div class="row-fluid">
-                <div class="span2 infoContent"><span class="infoContent">Contact:</span></div>
-                <div class="span8 infoContent"><span class="infoContent"><a href="mailto:info@scrumcards5.com">E-Mail</a></span></div>
+                <div class="span4 infoRow"><span class="infoRow">Version:</span></div>
+                <div class="span6 infoRow"><span class="infoRow">0.0.1 - Alpha -</span></div>
             </div>
 
         </div>
