--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
             <div class="infoRow">What purpose serves this app?</div>
             <div class="infoRow">
                 <strong>
-                    <a href="http://en.wikipedia.org/wiki/Planning_poker" class="infoContent">
+                    <a href="http://en.wikipedia.org/wiki/Planning_poker" class="infoContent" target="_blank">
                         It is a scum tool to estimate efforts of user stories.
                         Those efforts are represented as values on the chosen card deck.
                     </a>
@@ -157,7 +157,7 @@
                 <div class="span4 infoRow"><span class="infoRow">Author:</span></div>
                 <div class="span6 infoRow"><span class="infoRow">
                     <strong>
-                        <a href="http://kacperbak.de" class="infoContent">Kacper Bak</a>
+                        <a href="http://kacperbak.de" class="infoContent" target="_blank">Kacper Bak</a>
                     </strong>
                 </span></div>
             </div>
@@ -166,7 +166,7 @@
                 <div class="span4 infoRow"><span class="infoRow">Source:</span></div>
                 <div class="span6 infoRow"><span class="infoRow">
                     <strong>
-                        <a href="https://github.com/KacperBak/scrumcards5" class="infoContent">GitHub</a>
+                        <a href="https://github.com/KacperBak/scrumcards5" class="infoContent" target="_blank">GitHub</a>
                     </strong>
                 </span></div>
             </div>
@@ -175,7 +175,7 @@
                 <div class="span4 infoRow"><span class="infoRow">Contact:</span></div>
                 <div class="span6 infoRow"><span class="infoRow">
                     <strong>
-                        <a href="mailto:info@scrumcards5.com" class="infoContent">E-Mail</a>
+                        <a href="mailto:info@scrumcards5.com" class="infoContent" target="_blank">E-Mail</a>
                     </strong>
                 </span></div>
             </div>
