--- a/index.html
+++ b/index.html
@@ -276,10 +276,10 @@
     </div>
 
     <!-- development -->
-    <script src="js/lib/jquery-1.10.2.min.js"></script>
-    <script src="js/lib/bootstrap.min.js"></script>
-    <script src="js/lib/underscore-min.js"></script>
-    <script src="js/lib/string.min.js"></script>
+    <script src="js/lib/jquery-1.10.2.js"></script>
+    <script src="js/lib/bootstrap.js"></script>
+    <script src="js/lib/underscore.js"></script>
+    <script src="js/lib/string.js"></script>
 
     <script src="js/app/initapp.js"></script>
     <script src="js/app/screenDimension.js"></script>
