--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <link rel="icon" href="favicon.png" type="image/png">
         <link rel="apple-touch-icon-precomposed" href="apple-touch-icon-precomposed.png">
     </head>
-    <body>
+    <body style="display: none; background-color: #a7a7a7;">
 
     <div id="header" class="header row-fluid">
         <div class="span4"><button id="decks" class="btn btn-large btn-block" type="button"><i class="icon-font"></i></button></div>
@@ -302,24 +302,22 @@
     <script src="js/ui/settingsSegment.js"></script>
     <script src="js/ui/themesSegment.js"></script>
 
+    <script type="text/javascript">initSc5();</script>
+
     <!-- deployment -->
-    <!--<script src="./index.js"></script>-->
+    <!--<script defer src="./index.js"></script>-->
+    <!--<script async type="text/javascript">-->
 
-    <!-- init  -->
-    <script type="text/javascript">
+        <!--var _gaq = _gaq || [];-->
+        <!--_gaq.push(['_setAccount', 'UA-26057772-2']);-->
+        <!--_gaq.push(['_trackPageview']);-->
 
-        initSc5();
+        <!--(function() {-->
+            <!--var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;-->
+            <!--ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';-->
+            <!--var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);-->
+        <!--})();-->
 
-        var _gaq = _gaq || [];
-        _gaq.push(['_setAccount', 'UA-26057772-2']);
-        _gaq.push(['_trackPageview']);
-
-        (function() {
-            var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-            ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-            var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-        })();
-
-    </script>
+    <!--</script>-->
     </body>
 </html>
