--- a/index.html
+++ b/index.html
@@ -151,6 +151,7 @@
                     </a>
                 </strong>
             </div>
+
             <div class="infoRow">&nbsp;</div>
 
             <div class="row-fluid">
@@ -179,6 +180,15 @@
                     </strong>
                 </span></div>
             </div>
+
+            <div class="row-fluid">
+                <div class="span4 infoRow"><span class="infoRow">Spread:</span></div>
+                <div class="span6 infoRow"><span class="infoRow">
+                    <a href="https://twitter.com/share" class="twitter-share-button" data-text="Using #Scrum? Easy #PlanningPoker for all #HTML5 capable devices." data-size="large" data-related="KacperBak" data-hashtags="scrumcards5">Tweet</a>
+                </span></div>
+            </div>
+
+            <div class="infoRow">&nbsp;</div>
 
             <div class="row-fluid">
                 <div class="span4 infoRow"><span class="infoRow">Version:</span></div>
@@ -306,18 +316,21 @@
 
     <!-- deployment -->
     <!--<script defer src="./index.js"></script>-->
-    <!--<script async type="text/javascript">-->
+    <script async type="text/javascript">
 
-        <!--var _gaq = _gaq || [];-->
-        <!--_gaq.push(['_setAccount', 'UA-26057772-2']);-->
-        <!--_gaq.push(['_trackPageview']);-->
+        /* google analytics */
+        var _gaq = _gaq || [];
+        _gaq.push(['_setAccount', 'UA-26057772-2']);
+        _gaq.push(['_trackPageview']);
 
-        <!--(function() {-->
-            <!--var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;-->
-            <!--ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';-->
-            <!--var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);-->
-        <!--})();-->
+        (function() {
+            var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+            ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+            var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+        })();
 
-    <!--</script>-->
+        /* twitter */
+        !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');
+    </script>
     </body>
 </html>
