--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
 
             <div class="row-fluid">
                 <div class="span4 infoRow"><span class="infoRow">Version:</span></div>
-                <div class="span6 infoRow"><span class="infoRow">0.0.1 - Alpha -</span></div>
+                <div class="span6 infoRow"><span class="infoRow">0.1.0</span></div>
             </div>
 
         </div>
