--- a/index.html
+++ b/index.html
@@ -86,8 +86,11 @@
         <!-- mainSymbolPreviewFontSize menu -->
         <div id="mainSymbolPreviewFontSizeSegment" class="row-fluid">
             <div class="row-fluid">
-                <div class="span2 infoContent"><span class="infoContent">Version:</span></div>
-                <div class="span8 infoContent"><span class="infoContent">0.0.1 - Alpha -</span></div>
+                <div class="span12">
+                    <h4 id="customizedPreviewFontSizeParent" class="settingsContent">
+                        <span id="customizedPreviewFontSizeValue">Font size factor: </span>
+                    </h4>
+                </div>
             </div>
 
             <div class="row-fluid">
